# OBA_sparql

./: .gitignore  .release-it.json  .travis.yml  MANIFEST.in  Pipfile  README.md  logging_config.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  static.py  test-requirements.txt  tox.ini
.github/workflows/: python-packages.yml
examples/: config.ini
oba-sparql/: __init__.py
obasparql/: __init__.py  gquery.py  query_manager.py  sparqlconnector.py  static.py  utils.py
test/: __init__.py  logging_config.ini  test_dispatch_sparql_query_dbpedia.py  test_dispatch_sparql_query_model_catalog.py  test_frame.py  test_queries.py  test_query_dbpedia.py  test_query_manager.py  test_query_model_catalog.py  test_query_model_catalog_dev.py
test/contexts/: context.json
test/dbpedia/contexts/: context.json  context_class.json
test/inputs/: frame.json
test/model_catalog/contexts/: context_class.json
test/model_catalog_dev/contexts/: context_overwrite.json
test/queries/ModelConfiguration/: get_all_search_user.rq
test/queries/_default_/: get_all.rq  get_all_search.rq  get_all_search_user.rq  get_one.rq  get_one_user.rq
test/queries/custom/: get_setup.rq
test/settings/: __init__.py  config.ini  config_dbpedia.ini
tests/: logging_config.ini  test_dispatch_sparql_query_dbpedia.py  test_dispatch_sparql_query_model_catalog.py  test_frame.py  test_query_dbpedia.py  test_query_manager.py  test_query_model_catalog.py  test_query_model_catalog_dev.py
tests/inputs/: framed.json  input.json
tests/settings/: __init__.py  test_local_endpoint.py
(+14 files in other folders)
