[tool.poetry]
name = "oba_sparql"
version = "4.0.5"
description = ""
authors = ["Maximilinano Osorio <mosorio@isi.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
validators = "0.15.0"
pythonql3 = "0.9.61"
pyaml = "18.11.0"
rdflib = "6.1.1"
requests = "^2.20.0"
simplejson= "3.16.0"
six = "1.11.0"
urllib3 = "^1.26.5"
webencodings = "0.5.1"
werkzeug = "0.15.3"
PyLD = "^2.0.3"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
